src/test/deca/syntax/valid/lex/LectureMultiLineCaractere.deca
// Description:
//    Programme minimaliste lisant un MultiLineCaractere
//
// Resultats:
//      ok
//
// Historique:
//    cree le 01/01/2022


"Lecture 
MULTI
LINE 
CHAR"

