src/test/deca/syntax/invalid/lex/FauxCaractere3.deca
// Description:
//    Programme minimaliste utilisant un faux string
//
// Resultats:
//   token recognition error at: '"FAUX \ '
//
// Historique:
//    cree le 01/01/2022


"FAUX \ STRING "



